--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==7.1.2
 environs==7.4.0
 Flask==1.1.2
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
